--- a/index.html
+++ b/index.html
@@ -183,24 +183,21 @@
 
 <script>
   var fireballSize = 22;
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
   var getFireballSpeed = function (left) {
-    if (left) {
-      return 5;
-    }
-    else {
-      return 2;
-    }
+    left ? 5 : 2;
   };
-  var wizardSpeed = 3,
-    wizardWidth = 70;
+
   var getWizardHeight = function (wizardWidth) {
     return 1.337 * wizardWidth;
   };
-  var getWizardX = function (width) {
-    return 0.5 * width;
+  var getWizardX = function (width) {  
+   return Math.abs((0.5 * width) - (0.5 * wizardWidth));
   };
-  var getWizardY = function (height) {
-    return 1 / 3 * height;
+ 
+  var getWizardY = function (height) {       
+    return Math.abs((1 / 3 * height) - (0.5 * getWizardHeight(wizardWidth)));
   };
 </script>
 <script src="js/game.js"></script>
