--- a/index.html
+++ b/index.html
@@ -186,8 +186,9 @@
   var wizardSpeed = 3;
   var wizardWidth = 70;
   var getFireballSpeed = function (left) {
-    left ? 5 : 2;
+    return left ? 5 : 2;
   };
+
   var getWizardHeight = function (wizardWidth) {
     return 1.337 * wizardWidth;
   };
@@ -199,7 +200,9 @@
     return Math.abs((1 / 3 * height) - (0.5 * getWizardHeight(wizardWidth)));
   };
 </script>
+
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
+
 </body>
 </html>
